--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h1>FCS Game Journal</h1>
         <div class="button-group">
             <div id="g_id_onload"
-                data-client_id="YOUR_CLIENT_ID"
+                data-client_id="812194722245-3cinf55qaia7jlftpuoo9kco7dtetmbf.apps.googleusercontent.com"
                 data-context="signin"
                 data-ux_mode="popup"
                 data-callback="handleCredentialResponse"
@@ -116,7 +116,7 @@
         <div id="content"></div>
     </div>
     <script>
-        const CLIENT_ID = 'YOUR_CLIENT_ID'; // Replace with your client ID
+        const CLIENT_ID = '812194722245-3cinf55qaia7jlftpuoo9kco7dtetmbf.apps.googleusercontent.com'; // Replace with your client ID
 
         async function handleCredentialResponse(response) {
             const token = response.credential;
