--- a/index.html
+++ b/index.html
@@ -146,30 +146,33 @@
             if (scriptUrl) {
                 document.getElementById('journalForm').classList.remove('hidden');
             } else {
-                // Check if the backup configuration file exists in Google
-                                try {
+                // Check if the backup configuration file exists in Google Drive
+                try {
                     const response = await gapi.client.drive.files.list({
-                        q: "name='fcs_config.json' and trashed=false",
-                        fields: "files(id, name)"
+                        'q': "name = 'fcs_config.json' and trashed = false",
+                        'spaces': 'drive',
+                        'fields': 'files(id, name)'
                     });
-                    if (response.result.files && response.result.files.length > 0) {
-                        const fileId = response.result.files[0].id;
+
+                    const files = response.result.files;
+                    if (files && files.length > 0) {
+                        const fileId = files[0].id;
                         const fileResponse = await gapi.client.drive.files.get({
                             fileId: fileId,
                             alt: 'media'
                         });
-                        const config = JSON.parse(fileResponse.body);
-                        if (config.version === CONFIG_VERSION) {
-                            localStorage.setItem('script_url', config.scriptUrl);
-                            document.getElementById('journalForm').classList.remove('hidden');
-                        } else {
-                            document.getElementById('scriptUrlPrompt').classList.remove('hidden');
+
+                        const configData = JSON.parse(fileResponse.body);
+                        if (configData.version !== CONFIG_VERSION) {
+                            throw new Error('Config version mismatch');
                         }
+                        localStorage.setItem('script_url', configData.script_url);
+                        document.getElementById('journalForm').classList.remove('hidden');
                     } else {
                         document.getElementById('scriptUrlPrompt').classList.remove('hidden');
                     }
                 } catch (error) {
-                    console.error('Error checking for script URL:', error);
+                    console.error('Error checking for config file:', error);
                     document.getElementById('scriptUrlPrompt').classList.remove('hidden');
                 }
             }
@@ -178,46 +181,52 @@
         async function saveScriptUrl() {
             const scriptUrl = document.getElementById('scriptUrl').value;
             localStorage.setItem('script_url', scriptUrl);
-            const config = {
-                version: CONFIG_VERSION,
-                scriptUrl: scriptUrl
+
+            // Save the configuration file to Google Drive
+            const configData = {
+                script_url: scriptUrl,
+                version: CONFIG_VERSION
+            };
+
+            const blob = new Blob([JSON.stringify(configData)], { type: 'application/json' });
+            const metadata = {
+                name: 'fcs_config.json',
+                mimeType: 'application/json',
+                parents: ['appDataFolder']
             };
 
             try {
-                const blob = new Blob([JSON.stringify(config)], { type: 'application/json' });
-                const metadata = {
-                    name: 'fcs_config.json',
-                    mimeType: 'application/json'
-                };
-                const formData = new FormData();
-                formData.append('metadata', new Blob([JSON.stringify(metadata)], { type: 'application/json' }));
-                formData.append('file', blob);
+                const file = new File([blob], 'fcs_config.json');
+                const form = new FormData();
+                form.append('metadata', new Blob([JSON.stringify(metadata)], { type: 'application/json' }));
+                form.append('file', file);
 
                 const response = await fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart', {
                     method: 'POST',
                     headers: {
-                        'Authorization': 'Bearer ' + gapi.auth.getToken().access_token
+                        'Authorization': `Bearer ${gapi.auth.getToken().access_token}`,
                     },
-                    body: formData
+                    body: form
                 });
 
-                if (response.ok) {
-                    document.getElementById('scriptUrlPrompt').classList.add('hidden');
-                    document.getElementById('journalForm').classList.remove('hidden');
-                } else {
-                    console.error('Error saving script URL:', response);
-                }
+                const result = await response.json();
+                console.log('File saved to Google Drive:', result);
+
+                document.getElementById('scriptUrlPrompt').classList.add('hidden');
+                document.getElementById('journalForm').classList.remove('hidden');
             } catch (error) {
-                console.error('Error saving script URL:', error);
+                console.error('Error saving config file:', error);
             }
         }
 
         function handleSignoutClick() {
+            google.accounts.id.disableAutoSelect();
             localStorage.removeItem('google_token');
             localStorage.removeItem('script_url');
             document.getElementById('g_id_signin').style.display = 'block';
             document.getElementById('logout-button').classList.add('hidden');
             document.getElementById('journalForm').classList.add('hidden');
+            document.getElementById('result').innerText = '';
             document.getElementById('content').innerHTML = '';
         }
 
@@ -281,4 +290,3 @@
     </script>
 </body>
 </html>
-
